# django_project2

./: README.md  pyproject.toml
blog/: urls.py  views.py
blog/templates/blog/: author_posts.html  post_form.html
django_project/: settings.py
users/templates/users/: profile.html  register.html
