[tool.poetry]
name = "django web"
version = "0.1.0"
description = "A simple django web project"
authors = ["Defixenas <defixass@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
django-crispy-forms = "^2.0"
django-bootstrap4 = "^23.1"
crispy-bootstrap4 = "^2022.1"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
Django = "^4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
